New idea for v5

--- a/playtesting/2017-03-17.md
+++ b/playtesting/2017-03-17.md
@@ -8,13 +8,13 @@ Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with 5 primary s
 
 ### What didn't work
 
-Overall kids were engaged and seemed to be having fun. Drones always spark drama. 
+Overall kids were engaged and seemed to be having fun. Drones always spark drama! 
 
 However, converting flowers into honey is not fun, even though it's a core mechanic of the game, as the *market economy*, supply&demand simulation hinges on it. Problems that surfaced around this part of the game:
 
 * Conversion table looked confusing (too many numbers?). It would be good to have separate conversion tables for different numbers of players 
 * Semantically, trading flowers for honey is weird (bees don't sell flowers to buy honey, they make honey)
-* Semantics aside, even if you buy into this *bees as humans* metaphor, there's something broken in having to  wait for everyone to complete their actions and only then being able to trade flowers for honey. Since the **total number of worker bees** is a pretty good predictor of how many flowers are going to be taken from the garden, we could try to have players trade their flowers for honey during their turn, by using `total workers` instead of `total flowers` as the variable to work out the individual price of a flower. Total workers will vary throughout a round (as people take turn and invest in buying new bees), but this may reveal an interesting dynamic and give the first player in a round a competitive advantage.
+* Semantics aside, even if you buy into this *bees as humans* metaphor, there's something broken in having to wait for everyone to complete their actions and only then being able to trade flowers for honey. Since the **total number of worker bees** is a pretty good predictor of how many flowers are going to be taken from the garden, we could try to have players trade their flowers for honey during their turn, by using `total workers` instead of `total flowers` as the variable to work out the individual price of a flower. Total workers will vary throughout a round (as people take turn and invest in buying new bees), but this may reveal an interesting dynamic and give the first player in a round a competitive advantage.
 
 ### Actions
 
@@ -32,11 +32,71 @@ However, converting flowers into honey is not fun, even though it's a core mecha
 - Sell your bees for 1/3 of their initial price (suggestion from Marco, aka *the strategist*)
 - Game ends when you buy your 12th bee? 
 - You must have a queen in order to win?
-- Event cards, draw one per round and everybody is affected, eg: `Drones can't be used this round` or `Worker bees are striking, you can use no more than one` etc.
+- **Event cards**: draw one per round and everybody is affected, eg: `Drones can't be used this round` or `Worker bees are striking, you can use no more than one` etc.
 
-#### v5
+# v5
 
-**Honey** bees (suggestion from Federico) sparked a few ideas for a new game version, which may also feature **trader** bees.
+### The problem(s)
 
+1. **Allegory**
+	
+	Some kids seemed to have an issue with the flower/honey trade: *bees don't sell flowers to buy honey, they make honey*. They definitely have a point. I think if the bees allegory maps reality (or what people know about real bees) more closely, then players will find it easier to remember the game rules, because they will *make sense*. 
+* **Broken mechanic**
 
+	There's something broken in having to wait for everyone to complete their actions and only then being able to trade flowers for honey. Ideally, you play your turn and then you're done.
+* **One action per turn**
 
+	In many other board games players can execute one action per turn, while Beesness so far has been more on the "do as much as you like" side, which has led to various edge cases.
+* **Free market**?
+
+	At the moment, you can only trade flowers for honey (not the other way around) and honey for bees (not the other way around). Why? It doesn't make much sense, and it limits player's choices. 
+	
+### A potential solution?
+
+Federico has been suggesting to include **honey** bees for a couple of weeks already. So I did, and whilst carrying out that thought experiment, I realised that another type of bee could be help nail the problems above. Instead of trading stuff as a separate action at the end of each round, there could be a specialised type of bee that does that: meet the **trader** bee. Its job is to buy and sell flowers (taken by the workers) or honey (produced by the honey bees). 
+
+#### Bee cards
+
+Name | Price | Skills (per turn)
+---- | ----- | ------
+Worker bee | 3 | It can take 1 flower from the garden
+Honey bee | 3? | It can convert 1 flower into 2 honey (take 2 honey from the bank and discard the flower)
+Trader bee | 6? | It can trade flowers for honey, or viceversa (for instance: if you are trading 2 flowers for 6 honey, ie *selling* flowers, ie *buying* honey, discard 2 flowers and take 2 honey from the bank)
+Drone bee | 9 | It can steal 3 honey
+Queen | 18 | It can generate one other bee (but not other queens) 
+
+The trader bee sounds like a useful card, but how do you determine the market prices for flowers and honey (ideally in a way that doesn't require waiting for the end of the round)? 
+
+The basic idea is that when flowers are cheap, honey is expensive, and when flowers go up in price, honey becomes cheap. Sort-of supply&demand. 
+
+Let's say there are 6 possible price ratios in this commodity market:
+
+Flowers | Honey
+------- | -----
+3 | 1
+2 | 1
+1 | 1
+**1** | **2**
+1 | 3
+1 | 4
+
+At the top cheap flowers. In the first case you get 3 flowers for 1 honey. Towards the bottom flowers become more expensive (and honey cheapens), so that in the last row you can trade 1 flower for 4 honey. The game starts with a `1 : 2` ratio (1 flower gets you 2 honey, same ratio as the honey bee).    
+
+With `one-action-per-turn` and the *trader* bee, we could have a routine like this, for each turn:
+ 
+1. Buy bee cards (same as v4)
+2. Do your **bee-action**, using only one type of bees. For instance, you can take flowers with your workers, or trade honey for flowers using your trader(s), but not both in the same turn.
+
+	When using traders, refer to the current `flower : honey` ratio to work out prices. That starts with a `1 : 2` ratio. 
+3.	At the end of your turn you move it up or down one step, according to the bee-action you performed:
+	
+	* If you used **worker** bees to take flowers, then flowers will become cheaper (eg from `1 : 2` to `1 : 1`). Move the ratio indicator *up*.
+	* If you used **honey** bees to make honey, then honey will become cheaper (eg from `1 : 2` to `1 : 3`). Move the ratio indicator *down*.
+	* If you used **drone** bees or the **queen**, the ratio will not change.
+	* If you used the **trader** bee: when you buy flowers, they will become cheaper because there are more flowers and less honey on the market (move the ratio indicator *up*). Likewise honey will become cheaper after you buy some of it (move the ratio indicator *down*).
+
+Your bee-action will therefore affect the flower/honey price for the player(s) after you. Ratios will keep fluctuating, making trade hopefully more interesting.
+
+The honey bee is not just for semantic reasons, but it also gives players a new set of strategic choices. Now with both honey and flowers being commodities on the market, you can choose which one to concentrate your actions on, and in which proportion.
+
+At the end of a round, the player who will start the next round takes care of replanting the garden (1 flower per player + roll the die).
