--- a/playtesting/2017-03-17.md
+++ b/playtesting/2017-03-17.md
@@ -12,7 +12,7 @@ Overall kids were engaged and seemed to be having fun. Drones always spark drama
 
 However, converting flowers into honey is not fun, even though it's a core mechanic of the game, as the *market economy*, supply&demand simulation hinges on it. Problems that surfaced around this part of the game:
 
-* Conversion table looked confusing (too many numbers?). It would be good to have separate conversion tables for different numbers of players 
+* Conversion table looked confusing (too many numbers?) It would be good to have separate conversion tables for different numbers of players 
 * Semantically, trading flowers for honey is weird (bees don't sell flowers to buy honey, they make honey)
 * Semantics aside, even if you buy into this *bees as humans* metaphor, there's something broken in having to wait for everyone to complete their actions and only then being able to trade flowers for honey. Since the **total number of worker bees** is a pretty good predictor of how many flowers are going to be taken from the garden, we could try to have players trade their flowers for honey during their turn, by using `total workers` instead of `total flowers` as the variable to work out the individual price of a flower. Total workers will vary throughout a round (as people take turn and invest in buying new bees), but this may reveal an interesting dynamic and give the first player in a round a competitive advantage.
 
@@ -41,19 +41,19 @@ However, converting flowers into honey is not fun, even though it's a core mecha
 1. **Allegory**
 	
 	Some kids seemed to have an issue with the flower/honey trade: *bees don't sell flowers to buy honey, they make honey*. They definitely have a point. I think if the bees allegory maps reality (or what people know about real bees) more closely, then players will find it easier to remember the game rules, because they will *make sense*. 
-* **Broken mechanic**
+2. **Broken mechanic**
 
 	There's something broken in having to wait for everyone to complete their actions and only then being able to trade flowers for honey. Ideally, you play your turn and then you're done.
-* **One action per turn**
+3. **One action per turn**
 
 	In many other board games players can execute one action per turn, while Beesness so far has been more on the "do as much as you like" side, which has led to various edge cases.
-* **Free market**?
+4. **Free market**?
 
 	At the moment, you can only trade flowers for honey (not the other way around) and honey for bees (not the other way around). Why? It doesn't make much sense, and it limits player's choices. 
 	
 ### A potential solution?
 
-Federico has been suggesting to include **honey** bees for a couple of weeks already. So I did, and whilst carrying out that thought experiment, I realised that another type of bee could be help nail the problems above. Instead of trading stuff as a separate action at the end of each round, there could be a specialised type of bee that does that: meet the **trader** bee. Its job is to buy and sell flowers (taken by the workers) or honey (produced by the honey bees). 
+Federico has been suggesting to include **honey** bees for a couple of weeks already. So I did, and while carrying out that thought experiment, I realised that another type of bee could be help nail the problems above. Instead of trading stuff as a separate action at the end of each round, there could be a specialised type of bee that does that: meet the **trader** bee. Its job is to buy and sell the colony's flowers (taken by the workers) or honey (produced by the honey bees). 
 
 #### Bee cards
 
