Tweaks following playtesting on 17.03

--- a/playtesting/2017-03-17.md
+++ b/playtesting/2017-03-17.md
@@ -18,13 +18,13 @@ However, converting flowers into honey is not fun, even though it's a core mecha
 
 ### Actions
 
- - [ ] A `3 honey` note is more useful than the `6 honey` one
+ - [x] A `3 honey` note is more useful than the `6 honey` one
  - [ ] State explicitly that honey should be kept visible at all times, you're not allowed to hide it. 
- - [ ] Flower tokens with different colours / graphics can be confusing. Use the same object (eg: chickpeas or so)
+ - [x] Flower tokens with different colours / graphics can be confusing. Use the same object (eg: chickpeas or so)
  - [ ] Drones can take from different players, not just from one. 
- - [ ] Print bee skills on cards
- - [ ] Starting honey budget: 12 + roll the die (competitive advantage)
- - [ ] Print conversion tables for different player numbers
+ - [x] Print bee skills on cards
+ - [x] Starting honey budget: 12 + roll the die (competitive advantage)
+ - [x] Print conversion tables for different player numbers
  - [ ] Try and have players trade their flowers for honey during their turn, by using `total workers` instead of `total flowers` as the variable to work out the individual price of a flower. 
 
 ### Ideas for the future
