--- a/playtesting/2017-03-22.md
+++ b/playtesting/2017-03-22.md
@@ -45,16 +45,51 @@ The minute time-box creates a nice frenzy, which keeps everyone interested.
 
 [ When doing this it helps to temporarily put the garden flowers aside. If there were a board, it could be divided into garden and market. ]
 
+### Post-game feedback form
+
+After the game, I sent a short questionnaire to participants, asking:
+
+1. Are there any aspects of the game that you found confusing?
+2. Did you feel bored at any point?
+3. How likely are you to recommend Beesness to your friends?
+
+Here's the [report from Typeform](https://baddeo1.typeform.com/report/v0lyFY/S0Dy)
+
+- 5/10 respondents found the **manual** confusing: missing examples and quite hard to understand. Some suggested to have 2 manuals: a short one to get the gist of the game, and a detailed one to learn everything. Also suggested having at the end the `can dos` and the `cannot dos` of the game. 
+
+	Definitely work to be done on the manual front.
+	
+- 4/10 found the **flowers are running out** situation (everybody loses) confusing: `abrupt`, conflicting with the winning goal and hard to manage because some players can get `greedy`. 
+
+	I think these reflect the experience I wanted to instigate, so I'm happy with that.
+	
+- 3/10 were puzzled by the **queen / privatisation**. Some thought the queen could only privatise one flower in total, and that it privatises a flower gathered by one of the workers (it couldn't simply take one from the garden). Others thought that it would safeguard honey profit from `inflation`, as in always giving you the maximum of 3 honey. 
+
+	I think I'm scrapping privatisation, as it doesn't add anything meaningful to the game for it to be worth the confusion it creates. 
+
+- Moments of **boredom** were related by 4/10 players to other taking t extremely long on their turns. 
+
+	Introducing a timer could be a good solution for that.
+ 
 ### Actions
 
+- [ ] Split the player actions in two:	
+	1. Buy beesness cards
+	2. Use them to execute your beesness plan
+- [ ] ~Bee cards~ Beesness cards
 - [ ] State explicitly that honey should be kept visible at all times, you're not allowed to hide it. 
-- [ ] Try and have players trade their flowers for honey during their turn, by using `total workers` instead of `total flowers` as the variable to work out the individual price of a flower. 
-- [ ] Diagram explaining beesness cards in the rules 
-- [ ] > If you take a few flowers, you can sell them for higher because they are scarce
-- [ ] Suggest protocol for privatised flowers, eg: put them on top of your queen card to distinguish them from the flowers you take with the workers.
+- [ ] Test the *stalk exchange*.
+- [ ] Try and have players trade their flowers for honey during their turn, by using `total workers` instead of `total flowers` as the variable to work out the individual price of a flower... 
+	
+	OR
+	
+	`You could sell your flowers now for 1 honey each, or wait for the market place at the end of the round`
 - [ ] Timer to limit a player's round.
-
-### Ideas for the future
+- [ ] > If you take a few flowers, you can sell them for higher because they are scarce
+- [ ] ~Suggest protocol for privatised flowers, eg: put them on top of your queen card to distinguish them from the flowers you take with the workers.~
+- [ ] Scrap privatisation.
+- [ ] Make a one-pager manual, and an extended version with `can dos` and `cannot dos` (and FAQs?)
+- [ ] Diagram explaining beesness cards in the manual
 
 #### Metaphors
 
