NowPlayThis round 1: Aimee, Lee and Nelson

--- a/playtesting/2017-04-08.md
+++ b/playtesting/2017-04-08.md
@@ -15,6 +15,7 @@ Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Aimee.
 
 ## Actions
 
+- [ ] Using a bee sticker (or any other token) to keep track of the player who started the round
 - [ ] Try **chance cards**, to be drawn each time you use a drone. These could either reward or penalise you. For example, penalising chance cards could be: 
 	- miss a turn
 	- only steal 2 honey (or give 1 back)
@@ -51,3 +52,25 @@ Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Aimee.
 	16 ... 19 | 2
 	20 + | 1
 	
+# 4p - v4
+
+Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Aimee, Nelson and Lee at NowPlayThis.
+
+Nelson mentioned that `bees knees` allegedly is a phrase originated in Italo-American NYC communities (mispronunciation of `business`)
+
+His suggestions:
+
+* a couple of extra cards:
+
+	* a queen-style bee that lets you **poach** other bees at 50% from other beesnesses
+	* a **propolis bee** that helps you keep the hive healthy (in case of an *infection*)	
+
+* cards could have a standard (usable every turn) and a special skill (usable only once?), for example: the worker's standard skill is to pick up one flower per turn, and its special skill is to trade flowers for honey at a fixed price.
+
+* use **one type of cards at a time** (`either take flowers or honey`), which would make the game `more strategic` (this is very similar to v5's core mechanic)
+
+* add **conditions**, eg: you need a drone in order to access the stalk exchange 
+
+* look into [Viticulture](https://www.boardgamegeek.com/boardgame/128621/viticulture) 
+
+In the Typeform NPS Nelson gave it an 8, as `it has the potential to be a fun game, even more when you start exploring the analogies (which can also be the source of fun, as we had), no 10 because it's still not there yet`. He also mentioned that he found the game goal confusing: `Is the final goal to maintain enough flowers to keep the bees alive or to get the most honey, even at the cost of maintaining just the one last flower? Maybe the bees start dying if there are too few flowers (say one per bee), before total extinction if there are no more flowers.` 
