NowPlayThis round 2: Ben, Alex, Maria, Jennie and Neale

--- a/playtesting/2017-04-08.md
+++ b/playtesting/2017-04-08.md
@@ -52,7 +52,7 @@ Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Aimee.
 	16 ... 19 | 2
 	20 + | 1
 	
-# 4p - v4
+# NPT1 | 4p - v4
 
 Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Aimee, Nelson and Lee at NowPlayThis.
 
@@ -74,3 +74,21 @@ His suggestions:
 * look into [Viticulture](https://www.boardgamegeek.com/boardgame/128621/viticulture) 
 
 In the Typeform NPS Nelson gave it an 8, as `it has the potential to be a fun game, even more when you start exploring the analogies (which can also be the source of fun, as we had), no 10 because it's still not there yet`. He also mentioned that he found the game goal confusing: `Is the final goal to maintain enough flowers to keep the bees alive or to get the most honey, even at the cost of maintaining just the one last flower? Maybe the bees start dying if there are too few flowers (say one per bee), before total extinction if there are no more flowers.` 
+
+# NPT2 | 5p - v4
+
+Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Ben, Alex, Maria, Jennie and Neale at NowPlayThis.
+
+Ben and Alex commented that the game would be quite different if we had some cardboard to **hide your cards and honey** (like in [Game of Thrones](https://boardgamegeek.com/boardgame/103343/game-thrones-board-game-second-edition))
+
+New bees suggested:
+
+* a **defender** bee to protect you from drone attacks
+* a **killer** bee to destroy one of your opponent's cards per turn
+
+Ben started a **reseller market**: bought a queen, then started buying up cheap bees and offering them to other players at a slightly higher price.
+
+### The referendum
+
+The big change we introduced to the game in this session relates to the **beesaster situation**. After several failed attempts at replanting, with flowers stuck at 1, Alex noted that the consensus system is tricky/broken because there will always be some player who has no incentive to donate bees and replant flowers (`by the time my turn comes, those flowers will have been taken`). Neale suggested the replanting goes ahead if there is a **majority** of players willing to donate. There was some resistance from other players but we decided to try it. So **referendum** it was. We then noticed that 1 bee for 1 flower seemed to be not enough of an incentive for players to donate bees (again, they worked out that by the time their turn would come those flowers would be gone). So we decided **each donated bee will get you 2 flowers**.
+
