NowPlayThis round 3: Ben, Matt, ???, Phil and Justin

--- a/playtesting/2017-04-08.md
+++ b/playtesting/2017-04-08.md
@@ -58,20 +58,20 @@ Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Aimee, Nels
 
 Nelson mentioned that `bees knees` allegedly is a phrase originated in Italo-American NYC communities (mispronunciation of `business`)
 
-His suggestions:
+### Nelson suggests
 
-* a couple of extra cards:
+* A couple of extra cards:
 
 	* a queen-style bee that lets you **poach** other bees at 50% from other beesnesses
 	* a **propolis bee** that helps you keep the hive healthy (in case of an *infection*)	
 
-* cards could have a standard (usable every turn) and a special skill (usable only once?), for example: the worker's standard skill is to pick up one flower per turn, and its special skill is to trade flowers for honey at a fixed price.
+* Cards could have a standard (usable every turn) and a special skill (usable only once?), for example: the worker's standard skill is to pick up one flower per turn, and its special skill is to trade flowers for honey at a fixed price.
 
-* use **one type of cards at a time** (`either take flowers or honey`), which would make the game `more strategic` (this is very similar to v5's core mechanic)
+* Use **one type of cards at a time** (`either take flowers or honey`), which would make the game `more strategic` (this is very similar to v5's core mechanic)
 
-* add **conditions**, eg: you need a drone in order to access the stalk exchange 
+* Add **conditions**, eg: you need a drone in order to access the stalk exchange 
 
-* look into [Viticulture](https://www.boardgamegeek.com/boardgame/128621/viticulture) 
+* Look into [Viticulture](https://www.boardgamegeek.com/boardgame/128621/viticulture) 
 
 In the Typeform NPS Nelson gave it an 8, as `it has the potential to be a fun game, even more when you start exploring the analogies (which can also be the source of fun, as we had), no 10 because it's still not there yet`. He also mentioned that he found the game goal confusing: `Is the final goal to maintain enough flowers to keep the bees alive or to get the most honey, even at the cost of maintaining just the one last flower? Maybe the bees start dying if there are too few flowers (say one per bee), before total extinction if there are no more flowers.` 
 
@@ -91,4 +91,42 @@ Ben started a **reseller market**: bought a queen, then started buying up cheap 
 ### The referendum
 
 The big change we introduced to the game in this session relates to the **beesaster situation**. After several failed attempts at replanting, with flowers stuck at 1, Alex noted that the consensus system is tricky/broken because there will always be some player who has no incentive to donate bees and replant flowers (`by the time my turn comes, those flowers will have been taken`). Neale suggested the replanting goes ahead if there is a **majority** of players willing to donate. There was some resistance from other players but we decided to try it. So **referendum** it was. We then noticed that 1 bee for 1 flower seemed to be not enough of an incentive for players to donate bees (again, they worked out that by the time their turn would come those flowers would be gone). So we decided **each donated bee will get you 2 flowers**.
+
+## Actions
+
+- [ ] Update the rulebook with the *referendum* mechanics.
+
+# NPT3 | 5p - v4.1
+
+Tested v4.1 (v4 + referendum) with Ben, Matt, ???, Phil and Justin at NowPlayThis.
+
+### The referendum, again
+
+We clarified the referendum mechanics: as soon as the number of flowers goes under the number of players, and as long as it stays under, you can **trigger a beesaster referendum at any point during your turn**. 
+
+This means that the person currently playing has the power to invoke a referendum, and they could leverage the fact that they could potentially end the game by taking the last flowers (provided they have enough workers to do so). 
+
+This also means that multiple referendums could be triggered during the same round (although not likely). Some players said there should be a way to limit how many times one triggers a ref, for instance by having a limited number of *voting cards*. Not sure it's necessary: referendums don't get triggered so often because players understand that unless the circumstances of the majority have changed the outcome would be the same.
+
+When negotiating a referendum, people started to bribe other players for their vote, offering honey (not flowers).
+
+### Other suggestions
+
+* Queen to be able to steal bees from other beesnesses?
+
+* Drone: instead of being a fixed 3 honey, you could roll the die (maybe a special die that has -1, 0, 1, 2, 3, 4 or so.. or simply a 6-face die from which you subtract 2)
+
+* We asked this players what they thought of having **chance cards** associated to using the drone. They said it would not be worth the risk (hmm)
+
+* There should be a way to **re-enter the game**, for example if you have a team of workers and flowers are running low. Maybe sell your bees at half their initial price.
+
+## Actions
+
+- [ ] Can you lend honey? Yas.
+- [ ] Try the `roll die - 2` drone
+ 
+
+
+
+
 
