NowPlayThis round 4: Kiran and his friends, Nikita&Bav and Karen&Seb

--- a/playtesting/2017-04-08.md
+++ b/playtesting/2017-04-08.md
@@ -125,8 +125,28 @@ When negotiating a referendum, people started to bribe other players for their v
 - [ ] Can you lend honey? Yas.
 - [ ] Try the `roll die - 2` drone
  
+# NPT4 | 4p - v4.1
 
+Tested v4.1 (v4 + referendum) with Kiran and his friends, Nikita&Bav and Karen&Seb at NowPlayThis.
 
+Since people were playing in **teams**, we experimented with rolling the die twice on the starting round. This gave one team an extra boost, meaning that they could buy a queen and start getting bees at half price immediately. To balance this, maybe the initial capital could be 9 honey and you get to **roll the die twice**?
 
+The **referendum** mechanics worked well and sparked drama throughout the game, with scheming and negotiating taking the centre-stage. At one point Kiran threatened to kill the game (there was one flower left) if other players didn't agree to pay him with some honey. Good try Kiran. He did obtain a non-aggression promise in exchange for keeping the game alive and triggering a referendum.
+
+At some point people created a **coalition** against one team which was perceived to be too strong. They agreed to sell drones to each other `for dirt cheap` so that they could steal more honey. The coalition broke down after a couple of turns when one team decided to keep the drones they had just been given. Whilst an interesting tactic, it felt a little too dirty to be allowed as is, so I proposed that the trading of bees can happen as a **public auction** to which every player can take part. That way you can still trade them, but the player being targeted can still counteract the coalition by taking part in the auction.  
+
+### Other suggestions
+
+* **Marketplace prices change** each time? I think this means having more variety in the outcomes of the marketplace.
+* It would be nice to have **multiple ways to win the game**, not just hoarding honey.
+* 12 rounds felt a bit too long. There should be a way to make the **game shorter** (eg: 6 rounds, more honey at play). 
+* Buy first and steal later needed reminding repeatedly.
+* If you buy 2 queens what happens? You get bees at 1/3 of the price.
+
+## Actions
+
+- [ ] Try initial capital at 9 honey and you get to roll the die twice.
+- [ ] If you buy 2 queens what happens? You get bees at 1/3 of the price.
+- [ ] Try shorter game (6 rounds or time limit).
 
 
