--- a/playtesting/2017-04-08.md
+++ b/playtesting/2017-04-08.md
@@ -150,4 +150,56 @@ At some point people created a **coalition** against one team which was perceive
 - [ ] If you buy 2 queens what happens? You get bees at 1/3 of the price.
 - [ ] Try shorter game (6 rounds or time limit).
 
+# Typeform
 
+After the event I sent people a quick questionnaire:
+
+1. Are there any aspects of the game that you found confusing?
+2. Did you start to feel bored at any point during the game?
+3. How likely are you to recommend Beesness to your friends?
+
+Here are the [results](https://matteomenapace.typeform.com/report/lgXLLi/Zm4y): 5/13 people answered.
+
+### Are there any aspects of the game that you found confusing?
+
+1. **2/5** the *sequence of actions* (eg: buy cards, use cards, trade flowers), with one explaining that `at times I was so focussed on what other players were doing that I forgot the order of the actions`.
+2. **1/5** *replanting flowers*, the *metaphors*, the *everybody loses when all flowers are gone* situation, the *game goal* and the *opening dice roll*
+
+	- `Everybody loses just felt like a poor ending that could be purposefully invoked, when it was invoked by the other player - I was considering doing it at some point when it became obvious I couldn't win but chose not to in order to not spoil the game for others - but I didn't like that it was possible for another player to spoil the game as well.`
+	
+	- `Opening dice roll for additional honey felt weird to me also - why not keep it equal to start? (maybe because capitalism? but then I think the game could be in danger of being more a social commentary than as an actual fun game)`
+
+	- `Is the final goal to maintain enough flowers to keep the bees alive or to get the most honey, even at the cost of maintaining just the one last flower? Maybe the bees start dying if there are too few flowers (say one per bee), before total extinction if there are no more flowers.`
+3. **0/5** the *worker bees*, the *drones*, the *queen*, the *flower market*, the *game's manual* (we didn't test this because I was explaining the game) and the *flower-honey conversion chart*.
+
+### Did you start to feel bored at any point during the game?
+
+* Not bored but I didn't get a chance to look at all of the other exhibits because the game took longer than expected. Maybe a **quick play version** of the game would be good?
+* Perhaps **less than 12 rounds**. Completing the game in 30 minutes would be better as it took around 60 minutes.
+* When it became clear I couldn't win, however, this was due to an obviously poor strategy (that I just wanted to try out), so it's my fault. 
+
+### How likely are you to recommend Beesness to your friends?
+
+**Average 7**
+
+* **10**	
+
+	I liked the concept of the game and the fact that a group of strangers could have fun playing it. It was quite a unique and original game idea. It was fun to play, I liked that the players could be tactical and work our different strategies.
+	
+* **8**	
+
+	It has the potential to be a fun game, even more when you start exploring the analogies (which can also be the source of fun, as we had). No 10 because it's still not there yet.	
+
+* **8**	
+
+	Very enjoyable but perhaps slight improvements.
+
+* **5**	
+
+	Did not like co-op aspect.	
+	
+* **4**	
+	
+	It wasn't unenjoyable to play but the everybody-loses ending spoilt the game for me I think.
+	
+ 	 	 	 	
